@@ -58,7 +58,6 @@ import javax.naming.NamingException;
  * @author <a href="mailto:colin.chalmers@maxware.nl">Colin Chalmers</a>
  * @author <a href="mailto:matthias@wessendorf.net">Matthias Wessendorf</a>
  * @author <a href="mailto:corey.scott@gmail.com">Corey Scott</a>
- * @version $Revision$ $Date$
  * @version $Id$
  */
 public abstract class Email implements EmailConstants
@@ -541,12 +540,9 @@ public abstract class Email implements EmailConstants
                 properties.setProperty(MAIL_SMTP_SOCKET_FACTORY_FALLBACK, "false");
             }
 
-            if (isSSLOnConnect() || isStartTLSEnabled())
+            if ((isSSLOnConnect() || isStartTLSEnabled()) && isSSLCheckServerIdentity())
             {
-                if (isSSLCheckServerIdentity())
-                {
-                    properties.setProperty(MAIL_SMTP_SSL_CHECKSERVERIDENTITY, "true");
-                }
+                properties.setProperty(MAIL_SMTP_SSL_CHECKSERVERIDENTITY, "true");
             }
 
             if (this.bounceAddress != null)
