@@ -27,6 +27,7 @@ import java.io.InputStream;
  * Creates a <code>DataSource</code> based on an class path.
  *
  * @since 1.3
+ * @version $Id$
  */
 public class DataSourceClassPathResolver extends DataSourceBaseResolver
 {
