@@ -43,6 +43,7 @@ import java.util.List;
  * HTML text and attachments.
  *
  * @since 1.3
+ * @version $Id$
  */
 public class MimeMessageParser
 {
