@@ -23,7 +23,7 @@ import org.apache.commons.mail.mocks.MockSimpleEmail;
 /**
  * JUnit test case for SimpleEmailTest
  * @since 1.0
- * @version $Revision$ $Date$
+ * @version $Id$
  */
 public class SimpleEmailTest extends BaseEmailTestCase
 {
